# sc-api

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: auth-modes.md  protocol.md
src/sc_api/: __init__.py  _queries.py  auth.py  cli.py  client.py  cookies.py  exceptions.py  identity.py  portfolio.py  profiles.py  protocol.py  savings.py  securities.py  transactions.py  wealth.py
